--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jambonz-smpp-esme",
-  "version": "0.6.7-rc5",
+  "version": "v0.6.7-rc8",
   "description": "",
   "main": "app.js",
   "scripts": {
