--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jambonz-smpp-esme",
-  "version": "v0.6.7-rc8",
+  "version": "v0.7.0",
   "description": "",
   "main": "app.js",
   "scripts": {
