--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "v0.7.1",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": ">= 12.0.0"
+  },
   "scripts": {
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1",
     "jslint": "eslint app.js lib"
   },
   "author": "Dave Horton",
   "license": "MIT",
   "dependencies": {
-    "@jambonz/db-helpers": "^0.6.10",
+    "@jambonz/db-helpers": "^0.6.16",
     "@jambonz/node-smpp": "^0.6.5",
-    "@jambonz/realtimedb-helpers": "^0.4.1",
+    "@jambonz/realtimedb-helpers": "^0.4.9",
     "bent": "^7.3.12",
     "express": "^4.17.1",
     "pino": "^6.11.3",
@@ -20,7 +24,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^7.27.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "eslint": "^7.32.0",
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
