--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jambonz-smpp-esme",
-  "version": "v0.8.2",
+  "version": "0.8.3",
   "description": "",
   "main": "app.js",
   "engines": {
